--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <!--[if IE 7]>    <html class="ie lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>    <html class="ie lt-ie9"> <![endif]-->
 <!--[if gt IE 8]> <html> <![endif]-->
-<!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
+<!--[if !IE]><!--><html lang="vi"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Nhung's Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday Nhung">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -110,53 +110,62 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>Hôm này là một ngày đặc biệt</p>
+				<p>Bởi vì...</p>
+				<p>Đây chính là...</p>
+				<p>ngày cậu đến thế giới này</p>
+				<p>Thêm một năm nữa đã qua đi</p>
+				<p>Cậu đã trưởng thành hơn</p>
+				<p>mạnh mẽ hơn</p>
+				<p>Và mang trong mình</p>
+				<p>những ước mơ mới</p>
+				<p>Chúc cậu có một ngày sinh nhật</p>
+				<p>Đầy ý nghĩa</p>
+				<p>Tràn ngập niềm vui và tiếng cười</p>
+				<p>Tuổi mới...</p>
+				<p>Hành trình mới...</p>
+				<p>Hãy thật tự tin</p>
+				<p>Tớ tin rằng</p>
+				<p>Cậu có thể vượt qua mọi thử thách</p>
+				<p>Và đạt được ước mơ của cậu</p>
+				<p>Chúc cậu...</p>
+				<p>Sẽ có thật nhiều...</p>
+				<p>khoảnh khắc đáng nhớ trong năm tới</p>
+				<p>Những niềm vui bé nhỏ</p>
+				<p>Những thành công lớn lao</p>
+				<p>Những điều khiến cậu mỉm cười</p>
+				<p>Và tự hào về chính mình</p>
+				<p>Mong rằng năm tới...</p>
+				<p>Cậu sẽ có...</p>
+				<p>những trải nghiệm tuyệt vời</p>
+				<p>Hãy cứ là chính cậu...</p>
+				<p>Không ngừng phát triển bản thân</p>
+				<p>Dù thế giới có thay đổi như thế nào</p>
+				<p>Tớ tin rằng</p>
+				<p>Cậu sẽ luôn tỏa sáng</p>
+				<p>theo cách riêng của mình</p>
+				<p>Cuối cùng...</p>
+				<p>Cảm ơn vì đã là bạn của tớ</p>
+				<p>Cho tớ những lời khuyên</p>
+				<p>Và động viên</p>
+				<p>Rất chân thành</p>
+				<p>Những khoảnh khắc...</p>
+				<p>Bọn mình chia sẻ </p>
+				<p>những niềm vui, nỗi buồn</p>
+				<p>Đó sẽ là những kỉ niệm</p>
+				<p>Mà tớ không bao giờ quên</p>
+				<p>Tớ rất may mắn</p>
+				<p>Khi có một người bạn</p>
+				<p>Như cậu</p>
+				<p>Hy vọng...</p>
+				<p>Bọn mình sẽ có những kỉ niệm đẹp</p>
+				<p>trong năm tới</p>
+				<p>Chúc cậu có một ngày sinh nhật</p>
+				<p>Thật vui vẻ</p>
+				<p>Hạnh phúc</p>
+				<p>Một tuổi 21</p>
+				<p>Tràn đầy hạnh phúc và thành công</p>
+				<p>Happy Birthday!🥳🎉🎈💖</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -164,12 +173,12 @@
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">Nhấn để bật đèn</button>
 					<button class="btn btn-primary" id="play">Lên nhạc</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="bannar_coming">Thêm tí màu mè</button>
+					<button class="btn btn-primary" id="balloons_flying">Đi trộm code hehe </button>
+					<button class="btn btn-primary" id="cake_fadein">Bánh nè!!!</button>
+					<button class="btn btn-primary" id="light_candle">Thắp nến nào</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">Đôi lời gửi cậu</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
