Change paragraph content

--- a/index.html
+++ b/index.html
@@ -112,54 +112,37 @@
 			<div class="col-md-12">
 				<p>Hôm này là một ngày đặc biệt</p>
 				<p>Bởi vì...</p>
-				<p>Đây chính là...</p>
-				<p>ngày cậu đến thế giới này</p>
+				<p>Đây chính là ngày cậu đến thế giới này</p>
 				<p>Thêm một năm nữa đã qua đi</p>
-				<p>Cậu đã trưởng thành hơn</p>
-				<p>mạnh mẽ hơn</p>
-				<p>Và mang trong mình</p>
-				<p>những ước mơ mới</p>
+				<p>Cậu đã trưởng thành hơn, mạnh mẽ hơn</p>
 				<p>Chúc cậu có một ngày sinh nhật</p>
 				<p>Đầy ý nghĩa</p>
 				<p>Tràn ngập niềm vui và tiếng cười</p>
 				<p>Tuổi mới...</p>
 				<p>Hành trình mới...</p>
 				<p>Hãy thật tự tin</p>
-				<p>Tớ tin rằng</p>
-				<p>Cậu có thể vượt qua mọi thử thách</p>
+				<p>Tớ tin rằng cậu có thể vượt qua mọi thử thách</p>
 				<p>Và đạt được ước mơ của cậu</p>
 				<p>Chúc cậu...</p>
-				<p>Sẽ có thật nhiều...</p>
-				<p>khoảnh khắc đáng nhớ trong năm tới</p>
-				<p>Những niềm vui bé nhỏ</p>
+				<p>Sẽ có thật nhiều khoảnh khắc đáng nhớ <br/> trong năm tới</p>
+				<p>Những niềm vui nhỏ bé</p>
 				<p>Những thành công lớn lao</p>
 				<p>Những điều khiến cậu mỉm cười</p>
 				<p>Và tự hào về chính mình</p>
 				<p>Mong rằng năm tới...</p>
-				<p>Cậu sẽ có...</p>
-				<p>những trải nghiệm tuyệt vời</p>
+				<p>Cậu sẽ có những trải nghiệm tuyệt vời</p>
 				<p>Hãy cứ là chính cậu...</p>
 				<p>Không ngừng phát triển bản thân</p>
-				<p>Dù thế giới có thay đổi như thế nào</p>
-				<p>Tớ tin rằng</p>
+				<p>Dù có như thế nào đi chăng nữa</p>
+				<p>Thì tớ tin rằng</p>
 				<p>Cậu sẽ luôn tỏa sáng</p>
 				<p>theo cách riêng của mình</p>
 				<p>Cuối cùng...</p>
 				<p>Cảm ơn vì đã là bạn của tớ</p>
-				<p>Cho tớ những lời khuyên</p>
-				<p>Và động viên</p>
-				<p>Rất chân thành</p>
-				<p>Những khoảnh khắc...</p>
-				<p>Bọn mình chia sẻ </p>
-				<p>những niềm vui, nỗi buồn</p>
-				<p>Đó sẽ là những kỉ niệm</p>
-				<p>Mà tớ không bao giờ quên</p>
 				<p>Tớ rất may mắn</p>
-				<p>Khi có một người bạn</p>
-				<p>Như cậu</p>
+				<p>Khi có một người bạn Như cậu</p>
 				<p>Hy vọng...</p>
-				<p>Bọn mình sẽ có những kỉ niệm đẹp</p>
-				<p>trong năm tới</p>
+				<p>Bọn mình sẽ có những kỉ niệm đẹp <br/> trong năm tới</p>
 				<p>Chúc cậu có một ngày sinh nhật</p>
 				<p>Thật vui vẻ</p>
 				<p>Hạnh phúc</p>
