--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<p>Tuổi mới...</p>
 				<p>Hành trình mới...</p>
 				<p>Hãy thật tự tin</p>
-				<p>Tớ tin rằng cậu có thể vượt qua mọi thử thách</p>
+				<p>Tớ tin rằng cậu có thể vượt qua <br/> mọi thử thách</p>
 				<p>Và đạt được ước mơ của cậu</p>
 				<p>Chúc cậu...</p>
 				<p>Sẽ có thật nhiều khoảnh khắc đáng nhớ <br/> trong năm tới</p>
@@ -160,7 +160,7 @@
 					<button class="btn btn-primary" id="balloons_flying">Đi trộm code hehe </button>
 					<button class="btn btn-primary" id="cake_fadein">Bánh nè!!!</button>
 					<button class="btn btn-primary" id="light_candle">Thắp nến nào</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday!!!</button>
 					<button class="btn btn-primary" id="story">Đôi lời gửi cậu</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
